Add ssl support to db connection

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,8 @@ TYPEORM_USERNAME = db_user
 TYPEORM_PASSWORD = db_password
 TYPEORM_DATABASE = db_name
 TYPEORM_SCHEMA = db_schema_name
+# this option need for ssl conection
+TYPEORM_DRIVER_EXTRA = {"ssl":true}
 # typeorm options
 TYPEORM_SYNCHRONIZE = false
 TYPEORM_LOGGING = all
