--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/faker": "^4.1.9",
     "@types/hapi__joi": "^16.0.9",
     "@types/jest": "^24.9.1",
+    "@types/multer": "^1.4.2",
     "@types/node": "^12.12.26",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
