WIP: refactor - drop unused code

--- a/.env.example
+++ b/.env.example
@@ -28,4 +28,4 @@ TYPEORM_ENTITIES = dist/!(shared)/**/*.entity.js
 # DB migrstions
 TYPEORM_MIGRATIONS = dist/database/migrations/*.js
 TYPEORM_MIGRATIONS_DIR = src/database/migrations
-TYPEORM_MIGRATIONS_RUN = false
+TYPEORM_MIGRATIONS_RUN = true
