--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "NODE_ENV=production node dist/main",
     "start:prod:heroku": "node dist/main.js",
-    "lint": "tslint -p tsconfig.json -c tslint.json",
+    "lint": "eslint \\\"{src,apps,libs,test}/**/*.ts\\\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -28,49 +28,51 @@
     "release": "standard-version"
   },
   "dependencies": {
-    "@hapi/joi": "^17.1.0",
-    "@nestjs/common": "^6.11.5",
-    "@nestjs/config": "^0.2.3",
-    "@nestjs/core": "^6.11.5",
-    "@nestjs/platform-express": "^6.11.5",
-    "@nestjs/swagger": "^4.2.3",
-    "@nestjs/typeorm": "^6.2.0",
+    "@hapi/joi": "^17.1.1",
+    "@nestjs/common": "^7.4.4",
+    "@nestjs/config": "^0.5.0",
+    "@nestjs/core": "^7.4.4",
+    "@nestjs/platform-express": "^7.4.4",
+    "@nestjs/swagger": "^4.6.0",
+    "@nestjs/typeorm": "^7.1.3",
     "class-transformer": "^0.2.3",
-    "class-validator": "^0.11.0",
+    "class-validator": "^0.11.1",
     "dotenv": "^8.2.0",
     "enum-values": "^1.2.1",
     "faker": "^4.1.0",
-    "helmet": "^3.21.2",
-    "moment": "^2.24.0",
-    "pg": "^7.18.1",
+    "helmet": "^3.23.3",
+    "moment": "^2.27.0",
+    "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.1",
-    "rxjs": "^6.5.4",
-    "swagger-ui-express": "^4.1.3",
-    "typeorm": "^0.2.22",
-    "typeorm-seeding": "^1.2.0"
+    "rxjs": "^6.6.2",
+    "swagger-ui-express": "^4.1.4",
+    "typeorm": "^0.2.25",
+    "typeorm-seeding": "^1.6.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^6.14.1",
-    "@nestjs/schematics": "^6.9.1",
-    "@nestjs/testing": "^6.11.5",
-    "@types/express": "^4.17.1",
-    "@types/faker": "^4.1.9",
-    "@types/hapi__joi": "^16.0.9",
+    "@nestjs/cli": "^7.5.1",
+    "@nestjs/schematics": "^7.1.1",
+    "@nestjs/testing": "^7.4.4",
+    "@types/express": "^4.17.8",
+    "@types/faker": "^4.1.12",
+    "@types/hapi__joi": "^16.0.12",
     "@types/jest": "^24.9.1",
-    "@types/multer": "^1.4.2",
-    "@types/node": "^12.12.26",
-    "@types/supertest": "^2.0.8",
+    "@types/multer": "^1.4.4",
+    "@types/node": "^14.6.3",
+    "@types/supertest": "^2.0.10",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.22.0",
     "jest": "^24.9.0",
-    "prettier": "^1.18.2",
+    "prettier": "^2.1.1",
     "standard-version": "^9.0.0",
     "supertest": "^4.0.2",
     "ts-jest": "^24.3.0",
-    "ts-loader": "^6.1.1",
-    "ts-node": "^8.6.2",
+    "ts-loader": "^6.2.2",
+    "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
-    "tslint": "^5.20.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.9.7"
   },
   "jest": {
     "moduleFileExtensions": [
