--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "migrate": "npm run typeorm -- migration:run -t=false",
     "migration:revert": "npm run typeorm -- migration:revert",
     "seed": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed --class",
-    "release": "standard-version"
+    "release": "standard-version",
+    "prisma:generate": "npx prisma generate",
+    "prisma:generate:watch": "npx prisma generate --watch",
+    "prisma:save": "npx prisma migrate save --experimental",
+    "prisma:studio": "npx prisma studio --experimental",
+    "prisma:up": "npx prisma migrate up --experimental"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
@@ -35,6 +40,7 @@
     "@nestjs/platform-express": "^7.4.4",
     "@nestjs/swagger": "^4.6.0",
     "@nestjs/typeorm": "^7.1.3",
+    "@prisma/client": "2.6.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.1",
     "dotenv": "^8.2.0",
@@ -42,6 +48,7 @@
     "faker": "^4.1.0",
     "helmet": "^3.23.3",
     "moment": "^2.27.0",
+    "nestjs-prisma": "^0.5.1",
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.1",
@@ -54,6 +61,7 @@
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.1",
     "@nestjs/testing": "^7.4.4",
+    "@prisma/cli": "2.6.0",
     "@types/express": "^4.17.8",
     "@types/faker": "^4.1.12",
     "@types/hapi__joi": "^16.0.12",
