--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "baseUrl": "./",
     "incremental": true
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "prisma/*"]
 }
