--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.1",
     "@nestjs/testing": "^7.4.4",
-    "@prisma/cli": "2.6.0",
+    "@prisma/cli": "^2.6.2",
     "@types/express": "^4.17.8",
     "@types/faker": "^4.1.12",
     "@types/hapi__joi": "^16.0.12",
