build(config): fix package.json scripts for running prisma-cli commands

--- a/.env.example
+++ b/.env.example
@@ -10,22 +10,5 @@ APP_HOST = localhost | api.example.com
 API_DOCS_PATH = /swagger
 #API_PREFIX = v1
 
-## ormconfig
-# DB conection
-TYPEORM_CONNECTION = postgres (you RDBMS)
-TYPEORM_HOST = localhost
-TYPEORM_PORT = 5432 (db port)
-TYPEORM_USERNAME = db_user
-TYPEORM_PASSWORD = db_password
-TYPEORM_DATABASE = db_name
-TYPEORM_SCHEMA = db_schema_name
-# this option need for ssl conection
-TYPEORM_DRIVER_EXTRA = {"ssl":true}
-# typeorm options
-TYPEORM_SYNCHRONIZE = false
-TYPEORM_LOGGING = all
-TYPEORM_ENTITIES = dist/!(shared)/**/*.entity.js
-# DB migrstions
-TYPEORM_MIGRATIONS = dist/database/migrations/*.js
-TYPEORM_MIGRATIONS_DIR = src/database/migrations
-TYPEORM_MIGRATIONS_RUN = true
+## Prisma
+DATABASE_URL = postgresql://postgres:0112358@localhost:5432/wblb_films_prisma?schema=public
