--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "migrate": "npm run typeorm -- migration:run -t=false",
     "migration:revert": "npm run typeorm -- migration:revert",
     "release": "standard-version",
-    "prisma:generate": "npx prisma generate",
-    "prisma:generate:watch": "npx prisma generate --watch",
-    "prisma:save": "npx prisma migrate save --experimental",
-    "prisma:studio": "npx prisma studio --experimental",
-    "prisma:up": "npx prisma migrate up --experimental",
+    "prisma": "dotenv -e development.env -- npx prisma",
+    "prisma:generate": "npm run prisma -- generate",
+    "prisma:generate:watch": "npm run prisma -- generate --watch",
+    "prisma:save": "npm run prisma -- migrate save --experimental",
+    "prisma:studio": "npm run prisma -- studio --experimental",
+    "prisma:up": "npm run prisma -- migrate up --experimental",
     "seed": "ts-node prisma/_seeds/seed.ts"
   },
   "dependencies": {
@@ -70,6 +71,7 @@
     "@types/node": "^14.6.3",
     "@types/supertest": "^2.0.10",
     "@types/yargs": "^15.0.5",
+    "dotenv-cli": "^3.2.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.22.0",
