--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.1",
     "rxjs": "^6.6.2",
-    "swagger-ui-express": "^4.1.4",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
